0.16

0.15 2022-06-25T11:42:12+02:00
 - Fix Mediainfo doc.
 - Add fixture for Mediainfo.
 - Add fixture for MediainfoSnak.
 - Add fixture for MediainfoStatement.

0.14 2022-06-24T13:37:55+02:00
 - Add modified and explicit ns parameters to Item fixture.
 - Add modified parameter to Lexeme fixture.
 - Add modified parameter to Property fixture.
 - Add tests for fixtures.
 - Add tests for Lexeme.
 - Change ns for Lexeme to 146 (as Wikidata).

0.13 2022-06-23T00:09:39+02:00
 - Add tests for fixtures.
 - Add tests for Property.
 - Fix ns default value in doc of Property.
 - Fix place of error test in constructor in Item.

0.12 2022-05-29T20:11:07+02:00
 - Add Property datatype.
 - Add test instance for Property.
 - Fix minimal version of List::Util with none().
 - Fix versions in test instances.
 - Improve test instance for Human item.

0.11 2022-05-28T15:13:50+02:00
 - Add test instances.
 - Fix check_language().
 - Fix Unicode conversions in Item doc example.
 - Improve example in Form documentation.
 - Improve example in Sense documentation.
 - Update copyright years.

0.10 2021-07-17T15:11:15+02:00
 - Add test for Wikibase::Datatype::Value::Monolingual with utf8 text.
 - Improve doc for Snak.

0.09 2021-07-13T14:06:21+02:00
 - Add check_language() helper for check ISO 639-1 language code.
 - Add check for ISO 639-1 language code to
   Wikibase::Datatype::Value::Monolingual.
 - Fix doc for Snak 'datavalue' parameter.
 - Fix sentences in doc of Wikibase::Datatype::Utils.
 - Fix usage of Error::Pure::err in Value/* classes.

0.08 2021-01-26T21:24:31+01:00
 - Rewrite example in doc for Mediainfo to some real.
 - Rewrite exmaple in doc for MediainfoSnak to some real.
 - Rewrite example in doc for MediainfoStatement to some real.

0.07 2021-01-26T13:28:48+01:00
 - Add Mediainfo datatype.
 - Add MediainfoSnak datatype. There is difference between normal Snak in
   requirements of datatype.
 - Add MediainfoStatement datatype. There is difference between normal