@@ -1,4 +1,6 @@
 0.16
+ - Add Dog item fixture.
+ - Add InstanceOf::CommonLivingOrganism statement fixture.
 
 0.15 2022-06-25T11:42:12+02:00
  - Fix Mediainfo doc.
